<resources>
    <string name="app_name">BigProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">今天你“康”了吗</string>
    <string name="nav_header_subtitle">致力于帮您养成健康的使用手机的习惯</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首页</string>
    <string name="menu_report">手机使用报告</string>
    <string name="menu_setting">设置</string>
    <string name="menu_description">应用功能介绍</string>
    <string name="menu_team">团队介绍</string>

    <string name="home_second">Home Second</string>
    <string name="fragment_gallery_tv4">剧烈运动时使用手机时长</string>
    <string name="fragment_gallery_tv1">昨日使用手机时长</string>
    <string name="fragment_gallery_tv2">不健康使用手机时长</string>
    <string name="fragment_gallery_tv3">黑暗条件下使用手机时长</string>
    <string name="fragment_gallery_tv5">躺卧时使用手机时长</string>
</resources>
