<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_description"
            android:icon="@mipmap/ic_menu_info"
            android:title="@string/menu_description" />
        <item
            android:id="@+id/nav_report"
            android:icon="@mipmap/ic_menu_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_menu_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>
