<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bigproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <!--<action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />-->
    </fragment>
    <!--<fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.bigproject.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.bigproject.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report">
        <action
            android:id="@+id/action_nav_report_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.bigproject.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_nav_setting_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_team"
        android:name="com.example.bigproject.ui.team.TeamFragment"
        android:label="@string/menu_team"
        tools:layout="@layout/fragment_team">
        <action
            android:id="@+id/action_nav_team_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_description"
        android:name="com.example.bigproject.ui.description.DescriptionFragment"
        android:label="@string/menu_description"
        tools:layout="@layout/fragment_description">
        <action
            android:id="@+id/action_nav_description_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>