<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0"
    >

        <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:gravity="center_horizontal"
            />


    <TableRow>
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_gallery_tv1"
            />
        <TextView
            android:id="@+id/tvSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_gallery_tv2"/>
        <TextView
            android:id="@+id/tvHealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_gallery_tv3"
     />

        <TextView
            android:id="@+id/tvDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_gallery_tv4" />
        <TextView
            android:id="@+id/tvMove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow>
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_gallery_tv5" />

    <TextView
        android:id="@+id/tvSleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </TableRow>



        <LinearLayout

            android:id="@+id/ll_expense_piechart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        />



</TableLayout>